--- a/.gitignore
+++ b/.gitignore
@@ -24,9 +24,12 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+error.log
+out.log
 
 # local env files
 .env*.local
+.env
 
 # vercel
 .vercel
@@ -34,3 +37,7 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# temporary
+.temp
+.notes
